[package]
name = "git-delta"
authors = ["Dan Davison <dandavison7@gmail.com>"]
categories = ["command-line-utilities", "development-tools"]
description = "A syntax-highlighting pager for git"
documentation = "https://github.com/dandavison/delta"
edition = "2018"
homepage = "https://github.com/dandavison/delta"
license = "MIT"
repository = "https://github.com/dandavison/delta"
version = "0.18.2"

[[bin]]
name = "delta"
path = "src/main.rs"

[dependencies]
ansi_colours = "1.2.1"
ansi_term = "0.12.1"
anstyle-parse = "0.2.3"
anyhow = "1.0.70"
bat = { version = "0.24.0", default-features = false, features = [
    "minimal-application",
    "paging",
    "regex-onig",
] }
bitflags = "2.2.1"
box_drawing = "0.1.2"
bytelines = { version = "2.5.0", default-features = false }
chrono = "0.4.26"
chrono-humanize = "0.2.2"
clap_complete = "4.4.4"
clap = { version = "4.3.14", features = [
    "derive",
    "help",
    "usage",
    "error-context",
] }
console = "0.15.0"
ctrlc = "3.2.5"
dirs = "5.0.1"
git2 = { version = "0.20.0", default-features = false, features = [] }
grep-cli = "0.1.8"
itertools = "0.10.5"
lazy_static = "1.4"
palette = "0.7.2"
pathdiff = "0.2.1"
regex = "1.7.1"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
shell-words = "1.0.0"
smol_str = "0.1.24"
syntect = "5.0.0"
# sysinfo: no default features to disable the use of threads
sysinfo = { version = "0.29.0", default-features = false, features = [] }
terminal-colorsaurus = "0.4.8"
unicode-segmentation = "1.10.1"
# 0.2.0 (and 0.1.13) treats \n as width 1. Lines processed by delta have, lose,
# and re-gain \n in various stages, which complicates upgrading.
unicode-width = ">=0.1.14, <0.2.0"
xdg = "2.4.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
insta = { version = "1.*", features = ["colors", "filters"] }
rstest = "0.21.0"
pretty_assertions = "1.4"

[profile.test]
opt-level = 2

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
